2001-11-19  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am: Fix one more instance of the new
	glib-object.h stuff...Guess this one got lost under the
	carpet.

Mon, 19 Nov 2001 00:55:44 -0500 Frank Belew <frb@ximian.com>

	* Makefile.am: added panel-shell.h to panel_headers
		       added panel-marshal.list to EXTRA_DIST
	* APPLET_WRITING, gnome-panel-add-launcher.c, gnome-panel-properties.c,i
	  gnome-panel-screenshot.c, main.c, doc/panel.sgml: replaced PACKAGE
	  with GETTEXT_PACKAGE on all calls to bindtextdomain and textdomain

Sun Nov 18 21:24:24 2001  George Lebl <jirka@5z.com>

	* gnome-panel-screenshot.c, launcher.c, menu-properties.c,
	  panel_config.c, menu.c: s/GnomeDialog/GtkDialog/, reenable menu
	  properties again and port the .directory editting in menu.c

2001-11-18  Miles Lane  <miles@megapathdsl.net>

	* quick-desktop-reader.c: replace includes of
	<gobject/[genums, gboxed, gclosure and gvaluetypes].h
	with one include of <glib-object.h>.
	* panel-marshal-main.c:  replace include of
	<gobject/gboxed.h> with include of <glib-object.h>.
	Approved by Michael Meeks
	
Sun Nov 18 18:57:34 2001  George Lebl <jirka@5z.com>

	* swallow.c, extern.c: a bit of s/GnomeDialog/GtkDialog/

2001-11-18  Glynn Foster  <glynn.foster@sun.com>

	* applet.c: * basep-widget.c: * basep-widget.h: * button-widget.c: 
	* button-widget.h: * drawer-widget.c: * drawer-widget.h:
	* drawer.c: * edge-widget.c: * edge-widget.h: * floating-widget.c: 
	* floating-widget.h: * foobar-widget.c: * foobar-widget.h: * launcher.c: 
	* logout.c: * main.c: * menu-util.c: * menu.c: * multiscreen-stuff.c: 
	* panel-applet-frame.c: * panel-widget.c: * panel-widget.h: * panel.c: 
	* panel_config.c: * session.c: * sliding-widget.c: * sliding-widget.h:
	
	Finish off moving GtkType to GType and give a more consistant approach
	to all the header stuff.

Sun Nov 18 00:52:58 2001  George Lebl <jirka@5z.com>

	* Makefile.am, main.c:  set the standard gnome program properties
